Small changes for the DM to be shown with the Prototype 1.0

--- a/agenda/dm/src/main/resources/org/universAAL/ui/dm/messages_de.properties
+++ b/agenda/dm/src/main/resources/org/universAAL/ui/dm/messages_de.properties
@@ -14,3 +14,4 @@ OutputPublisher.date=Datum
 OutputPublisher.subject=Betreff
 OutputPublisher.ok=OK
 OutputPublisher.search=Suche
+OutputPublisher.ucc=Configuration Center
