--- a/agenda/dm/src/main/resources/org/universAAL/ui/dm/messages.properties
+++ b/agenda/dm/src/main/resources/org/universAAL/ui/dm/messages.properties
@@ -14,3 +14,4 @@ OutputPublisher.date=Date
 OutputPublisher.subject=Subject
 OutputPublisher.ok=OK
 OutputPublisher.search=Search
+OutputPublisher.ucc=Configuration Center
