agenda all components - major bug fixes towards 1.1.0 compatible version (now all build correctly)

--- a/agenda/agenda.ont/src/main/resources/org/universAAL/ontology/agenda/messages_es.properties
+++ b/agenda/agenda.ont/src/main/resources/org/universAAL/ontology/agenda/messages_es.properties
@@ -1,4 +1,4 @@
-ReminderType.0=Tipo de Recordatorio
+#ReminderType.ReminderType=Tipo de Recordatorio
 ReminderType.Blinking_light=Luces_parpadeantes
 ReminderType.No_reminder=Sin_recordatorio
 ReminderType.Sound=Sonido
