--- a/agenda/agenda.ont/src/main/resources/org/universAAL/ontology/agenda/messages_it.properties
+++ b/agenda/agenda.ont/src/main/resources/org/universAAL/ontology/agenda/messages_it.properties
@@ -1,4 +1,4 @@
-ReminderType.0=TipoPromemoria
+#ReminderType.ReminderType=TipoPromemoria
 ReminderType.Blinking_light=Luce_lampeggiante
 ReminderType.No_reminder=Nessun_promemoria
 ReminderType.Sound=Suono
