--- a/agenda/agenda.ont/src/main/resources/org/universAAL/ontology/agenda/messages_da.properties
+++ b/agenda/agenda.ont/src/main/resources/org/universAAL/ontology/agenda/messages_da.properties
@@ -1,4 +1,4 @@
-ReminderType.0=Påmindelse Type
+#ReminderType.ReminderType=Påmindelse Type
 ReminderType.Blinking_light=Blinkende_lys
 ReminderType.No_reminder=Ingen_påmindelse
 ReminderType.Sound=Lyd
