--- a/agenda/agenda.ont/src/main/resources/org/universAAL/ontology/agenda/messages_hr.properties
+++ b/agenda/agenda.ont/src/main/resources/org/universAAL/ontology/agenda/messages_hr.properties
@@ -1,6 +1,6 @@
-ReminderType.0=ReminderType
-ReminderType.Blinking_light=Blinking_light
-ReminderType.No_reminder=No_reminder
-ReminderType.Sound=Sound
-ReminderType.Visual_message=Visual_message
-ReminderType.Voice_message=Voice_message
+#ReminderType.ReminderType=TipPodsjetnika
+ReminderType.Blinking_light=Treperece svjetlo
+ReminderType.No_reminder=Nema podsjetnika
+ReminderType.Sound=Zvuk
+ReminderType.Visual_message=Vizualna poruka
+ReminderType.Voice_message=Glasovna poruka
