agenda different translations added, en now default

--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/components/messages_hr.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/components/messages_hr.properties
@@ -1,22 +1,22 @@
-DatePanel.date=date
-DatePanel.Day=day
-DatePanel.EndDate=End date
-DatePanel.Hour=hour
-DatePanel.Mins=mins
-DatePanel.Month=month
-DatePanel.StartDate=Start date
-DatePanel.time=time
-DatePanel.Year=year
-ReminderPanel.Active=Active
-ReminderPanel.Date=Date
-ReminderPanel.Inactive=Inactive
-ReminderPanel.Reminder=Reminder
-ReminderPanel.ReminderInfo=Reminder Info
-ReminderPanel.Type=Type
-ReminderPanel.VisualAlarm=Visual Alarm
-ReminderScreen.IntervalMins=interval (mins)
-ReminderScreen.Message=Message
-ReminderScreen.Misc=Misc
-ReminderScreen.ReminderDate=Reminder date
-ReminderScreen.ReminderType=Reminder Type
-ReminderScreen.RepeatsTimes=repeat (times)
+DatePanel.date=datum
+DatePanel.Day=dan
+DatePanel.EndDate=Datum zavrsetka
+DatePanel.Hour=sat
+DatePanel.Mins=minute
+DatePanel.Month=mjesec
+DatePanel.StartDate=Datum pocetka
+DatePanel.time=vrijeme
+DatePanel.Year=godina
+ReminderPanel.Active=Aktivan
+ReminderPanel.Date=Datum
+ReminderPanel.Inactive=Neaktivan
+ReminderPanel.Reminder=Podsjetnik
+ReminderPanel.ReminderInfo=Podsjetnik - detalji
+ReminderPanel.Type=Tip
+ReminderPanel.VisualAlarm=Vizualni alarm
+ReminderScreen.IntervalMins=interval (minute)
+ReminderScreen.Message=Poruka
+ReminderScreen.Misc=razno
+ReminderScreen.ReminderDate=Datum podsjetnika
+ReminderScreen.ReminderType=Tip podsjetnika
+ReminderScreen.RepeatsTimes=ponavljaj (puta)
