--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_da.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_da.properties
@@ -1,4 +1,5 @@
 JCalendar.EventsStored=Gemt(e) begivenhed(er):
+JCalendar.Breadcrumb.Home=Forside
 JCalendar.Fri=Fre
 JCalendar.Mon=Man
 JCalendar.PleaseSelectADayToSeeMoreInfo=Vælg venligst en dag for at se mere information
@@ -7,7 +8,12 @@ JCalendar.Sun=Søn
 JCalendar.Thu=Tor
 JCalendar.Tue=Tir
 JCalendar.Wed=Ons
+JEventInfo.Breadcrumb.Home.EventInfo=Forside -> Begivenhed Info
+JEventInfo.Breadcrumb.Home.EventList=Forsidet -> Lista de eventos
+JEventInfo.Breadcrumb.Home.SearchEvents=Forside -> Sog arrangementer
+JEventInfo.Breadcrumb.Home.SearchEvents=Kalender valg
 JEventInfo.AppointmentInfo=Aftale Information
+JEventInfo.Calendar=Kalender
 JEventInfo.Description=Beskrivelse
 JEventInfo.EndDate=Slutdato
 JEventInfo.EventType=Begivenhedstype
