--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_es.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_es.properties
@@ -1,4 +1,5 @@
 JCalendar.EventsStored=Evento(s) guardados:
+JCalendar.Breadcrumb.Home=Pantalla inicial
 JCalendar.Fri=Vie
 JCalendar.Mon=Lun
 JCalendar.PleaseSelectADayToSeeMoreInfo=Por favor, seleccione un día para ver más información
@@ -7,7 +8,12 @@ JCalendar.Sun=Dom
 JCalendar.Thu=Jue
 JCalendar.Tue=Mar
 JCalendar.Wed=Mie
+JEventInfo.Breadcrumb.Home.EventInfo=Pantalla inicial -> Datos del evento
+JEventInfo.Breadcrumb.Home.EventList=Pantalla inicial -> Lista de eventos
+JEventInfo.Breadcrumb.Home.SearchEvents=Pantalla inicial -> Buscar eventos
+JEventInfo.Breadcrumb.Home.SearchEvents=Calendario de seleccion
 JEventInfo.AppointmentInfo=Información sobre citas
+JEventInfo.Calendar=Calendario
 JEventInfo.Description=Descripción
 JEventInfo.EndDate=Fecha de finalización
 JEventInfo.EventType=Tipo de evento
