--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_it.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_it.properties
@@ -1,4 +1,5 @@
 JCalendar.EventsStored=Evento(i) memorizzati:
+JCalendar.Breadcrumb.Home=Schermata iniziale
 JCalendar.Fri=Ven
 JCalendar.Mon=Lun
 JCalendar.PleaseSelectADayToSeeMoreInfo=Seleziona un giorno per vedere più informazioni
@@ -7,6 +8,10 @@ JCalendar.Sun=Dom
 JCalendar.Thu=Gio
 JCalendar.Tue=Mar
 JCalendar.Wed=Mer
+JEventInfo.Breadcrumb.Home.EventInfo=schermata iniziale -> Informazioni sugli eventi
+JEventInfo.Breadcrumb.Home.EventList=schermata iniziale -> Elenco eventi
+JEventInfo.Breadcrumb.Home.SearchEvents=schermata iniziale -> Cerca eventi
+JEventInfo.Breadcrumb.Home.SearchEvents=Calendario selezione
 JEventInfo.AppointmentInfo=Informazioni Appuntamento
 JEventInfo.Description=Descrizione
 JEventInfo.EndDate=Data di fine
