--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/util/messages_hr.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/util/messages_hr.properties
@@ -1,12 +1,12 @@
-DateUtilities.April=April
-DateUtilities.August=August
-DateUtilities.December=December
-DateUtilities.February=February
-DateUtilities.January=January
-DateUtilities.July=July
-DateUtilities.June=June
-DateUtilities.March=March
-DateUtilities.May=May
-DateUtilities.November=November
-DateUtilities.October=October
-DateUtilities.September=September
+DateUtilities.April=Travanj
+DateUtilities.August=Kolovoz
+DateUtilities.December=Prosinac
+DateUtilities.February=Veljaca
+DateUtilities.January=Sijecanj
+DateUtilities.July=Srpanj
+DateUtilities.June=Lipanj
+DateUtilities.March=Ozujak
+DateUtilities.May=Svibanj
+DateUtilities.November=Studeni
+DateUtilities.October=Listopad
+DateUtilities.September=Rujan
