--- a/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_es.properties
+++ b/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_es.properties
@@ -1,9 +1,12 @@
-ISubscriber.1=Evento añadido correctamente
-ISubscriber.2=Error añadiendo evento
-ISubscriber.3=Error procesando los datos: La fecha introducida no es válida
-ISubscriber.4=Error procesando los datos: Asegúrese de que todos los campos obligatorios han sido introducidos
-ISubscriber.5=Error desconocido procesando los datos
-ISubscriber.6=Error desconocido en el servicio
+UIProvider.1=Evento añadido correctamente
+UIProvider.2=Error añadiendo evento
+UIProvider.3=Error procesando los datos: La fecha introducida no es válida
+UIProvider.4=Error procesando los datos: Asegúrese de que todos los campos obligatorios han sido introducidos
+UIProvider.5=Error desconocido procesando los datos
+UIProvider.6=Unknown error in service
+UIProvider.7=Event successfully removed
+UIProvider.8=Error while removing event
+UIProvider.9=Events successfully exported
 AgendaServlet.1=Compruebe su agenda, tiene un evento dentro de 2 horas
 AgendaWebGUI.1=Aqui puede añadir un nuevo evento para el usuario - Elija un calendario en el que guardar el evento
 AgendaWebGUI.2=¡No se han encontrado calendarios para el usuario!
