--- a/agenda/agenda.server/src/main/resources/org/universAAL/agenda/server/gui/wrapper/messages_hr.properties
+++ b/agenda/agenda.server/src/main/resources/org/universAAL/agenda/server/gui/wrapper/messages_hr.properties
@@ -1,3 +1,3 @@
-SimpleOutputPublisher.Reminder=Reminder...
-SimpleOutputPublisher.Snooze=Snooze
-SimpleOutputPublisher.TurnOff=Turn off
+SimpleOutputPublisher.Reminder=Podsjetnik...
+SimpleOutputPublisher.Snooze=Odgodi
+SimpleOutputPublisher.TurnOff=Iskljuci
