--- a/agenda/agenda.server/src/main/resources/org/universAAL/agenda/server/messages.properties
+++ b/agenda/agenda.server/src/main/resources/org/universAAL/agenda/server/messages.properties
@@ -8,6 +8,6 @@ AgendaProvider.Reminder=Reminder
 AgendaProvider.ReminderTriggered=Reminder triggered
 AgendaProvider.TheGivenCalendarAlreadyExists=The given calendar already exists\!
 AgendaProvider.TheGivenCalendarDoesNotExist=The given calendar does not exist\!
-AgendaProvider.TheGivenCalendarOrEventDoesNotExistOrThereIsNoCorrelationBetweenThem=The given calendar or event does not exist or there is no correlation between them\!
+AgendaProvider.TheGivenCalendarOrEventDoesNotExistOrThereIsNoCorrelationBetweenThem=The given calendar or event does not exist or there is no correlation with the event\!
 AgendaProvider.TheGivenEventCouldNotBeDeleted=The given event could not be deleted\!
 AgendaProvider.YouMustSpecifyAnOwnerForTheCalendar=You must specify an owner for the calendar
