--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_hr.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_hr.properties
@@ -1,54 +1,60 @@
-JCalendar.EventsStored=Event(s) stored:
-JCalendar.Fri=Fri
-JCalendar.Mon=Mon
-JCalendar.PleaseSelectADayToSeeMoreInfo=Please, select a day to see more information
-JCalendar.Sat=Sat
-JCalendar.Sun=Sun
-JCalendar.Thu=Thu
-JCalendar.Tue=Tue
-JCalendar.Wed=Wed
-JEventInfo.AppointmentInfo=Appointment Information
-JEventInfo.Description=Description
-JEventInfo.EndDate=End date
-JEventInfo.EventType=Event Type
-JEventInfo.Place=Place
-JEventInfo.Reminder=Reminder\!
-JEventInfo.RemoveThisEvent=Remove this event
-JEventInfo.StartDate=Start date
-JEventList.Appointment=Appointment
-JEventList.ClickForMoreInfo=Click for more info
-JEventList.EndDate=end date
-JEventList.Hour=Hour
-JEventList.NoEventIsStoredForThisDate=No event is stored for this date
-JEventList.NoScheduledAppointment=No scheduled appointment
-JEventList.Place=Place
-JEventList.ScheduleAppointment=scheduled appointment
-JEventList.ScheduledAppointment=scheduled appointment
-JEventList.ScheduledAppointments=scheduled appointments
-JEventList.SearchResults=Search Results
-JEventList.StartDay=start date
-JSearchEvents.AllYears=All years
-JSearchEvents.MaximumNumberOfEvents=Maximum number of events
-JSearchEvents.MiscOptions=Misc Options
-JSearchEvents.PickAMonth=Pick a month
-JSearchEvents.PickAYear=Pick a year
-JSearchEvents.RemiveThisEvent=Remove this event
-JSearchEvents.SearchByCategory=Search by category
-JSearchEvents.SearchByDescription=Search by description
-JSearchEvents.SearchForAppointments=Search for Appointments
-JSearchEvents.ShoWOnlyPresentAndFurureEvents=Show only<p>present and future events:
-JSelectionCalendar.AddRemoveAndBrowseYourCalendars=Add, remove and browse your calendars
-JSelectionCalendar.AllAssociatedEventsWillBeRemovedToo=all associated events will be removed too.
-JSelectionCalendar.AlongWiththeCalendar=Along with the calendar
-JSelectionCalendar.AlongWiththeCalendars=Along with the calendars
-JSelectionCalendar.AreYouSureYouWantToRemoveTheseCalendars=Are you sure you want to remove these Calendars? 
-JSelectionCalendar.AreYouSureYouWantToRemoveThisCalendar=Are you sure you want to remove this Calendar?
-JSelectionCalendar.CalendarName=Calendar Name
-JSelectionCalendar.CalendarnameIsOK=Calendar Name is ok
-JSelectionCalendar.Calendars=Calendars
-JSelectionCalendar.GiveANameForTheNewCalendar=Give a name for the new calendar
-JSelectionCalendar.ListOfCalendars=List of Calendars
-JSelectionCalendar.Name=Name
-JSelectionCalendar.PleaseChooseAnAlternativeOne=Please choose an alternative one
-JSelectionCalendar.SorryThisNameAlreadyExists=Sorry, this name already exists
-JSelectionCalendar.YouhaveToSpecifyAName=You have to specify a name
+JCalendar.EventsStored=Spremljenih dogadaja:
+JCalendar.Breadcrumb.Home=Pocetni ekran
+JCalendar.Fri=Pet
+JCalendar.Mon=Pon
+JCalendar.PleaseSelectADayToSeeMoreInfo=Odaberi dan za vise detalja
+JCalendar.Sat=Sub
+JCalendar.Sun=Ned
+JCalendar.Thu=Cet
+JCalendar.Tue=Uto
+JCalendar.Wed=Sri
+JEventInfo.Breadcrumb.Home.EventInfo=Pocetni ekran -> Informacije o dogadaju
+JEventInfo.Breadcrumb.Home.EventList=Pocetni ekran -> Lista dogadaja
+JEventInfo.Breadcrumb.Home.SearchEvents=Pocetni ekran -> Trazenje dogadaja
+JEventInfo.Breadcrumb.Home.SearchEvents=Odabir kalendara
+JEventInfo.AppointmentInfo=Informacija o sastanku
+JEventInfo.Calendar=Kalendar
+JEventInfo.Description=Opis
+JEventInfo.EndDate=Datum - kraj
+JEventInfo.EventType=Tip dogadaja
+JEventInfo.Place=Mjesto
+JEventInfo.Reminder=Podsjetnik\!
+JEventInfo.RemoveThisEvent=Makni dogadjaj
+JEventInfo.StartDate=Datum - pocetak
+JEventList.Appointment=Sastanak
+JEventList.ClickForMoreInfo=Odaberi za vise informacija
+JEventList.EndDate=datum - kraj
+JEventList.Hour=Sat
+JEventList.NoEventIsStoredForThisDate=Nema dogadaja za ovaj datum
+JEventList.NoScheduledAppointment=Nema planiranih sastanaka
+JEventList.Place=Mjest
+JEventList.ScheduleAppointment=planirani sastanak
+JEventList.ScheduledAppointment=planirani sastanak
+JEventList.ScheduledAppointments=planirani sastanci
+JEventList.SearchResults=Rezultati pretrage
+JEventList.StartDay=datum - pocetak
+JSearchEvents.AllYears=Sve godine
+JSearchEvents.MaximumNumberOfEvents=Maksimalni broj dogadaja
+JSearchEvents.MiscOptions=Razne opcije
+JSearchEvents.PickAMonth=Odaberi mjesec
+JSearchEvents.PickAYear=Odaberi godinu
+JSearchEvents.RemiveThisEvent=Makni dogadaj
+JSearchEvents.SearchByCategory=Pretrazi po kategoriji
+JSearchEvents.SearchByDescription=Pretrazi po opisu
+JSearchEvents.SearchForAppointments=Pretrazi sastanke
+JSearchEvents.ShoWOnlyPresentAndFurureEvents=Pokazi samo<p>sadasnje i buduce dogadaje:
+JSelectionCalendar.AddRemoveAndBrowseYourCalendars=Dodaj, izbrisi ili pregledaj svoje kalendare
+JSelectionCalendar.AllAssociatedEventsWillBeRemovedToo=svi vezani dogadaji ce takoder biti maknuti
+JSelectionCalendar.AlongWiththeCalendar=S kalendarom
+JSelectionCalendar.AlongWiththeCalendars=S kalendarima
+JSelectionCalendar.AreYouSureYouWantToRemoveTheseCalendars=Zaista zelis izbrisati kalendare? 
+JSelectionCalendar.AreYouSureYouWantToRemoveThisCalendar=Zaista zelis izbrisati ovaj kalendar?
+JSelectionCalendar.CalendarName=Ime kalendara
+JSelectionCalendar.CalendarnameIsOK=Ime kalendara je u redu
+JSelectionCalendar.Calendars=Kalendari
+JSelectionCalendar.GiveANameForTheNewCalendar=Daj ime novom kalendaru
+JSelectionCalendar.ListOfCalendars=Lista kalendara
+JSelectionCalendar.Name=Ime
+JSelectionCalendar.PleaseChooseAnAlternativeOne=Molim odaberi alternativu
+JSelectionCalendar.SorryThisNameAlreadyExists=Nazalost, ime vec postoji
+JSelectionCalendar.YouhaveToSpecifyAName=Ime se mora specificirati
