--- a/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_da.properties
+++ b/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_da.properties
@@ -1,9 +1,12 @@
-ISubscriber.1=Event successfully added
-ISubscriber.2=Error while ading event
-ISubscriber.3=Error processing the input: The introduced Date is not valid
-ISubscriber.4=Error processing the input: Make sure all mandatory fields are filled
-ISubscriber.5=Unknown error processing the input
-ISubscriber.6=Unknown error in service
+UIProvider.1=Event successfully added
+UIProvider.2=Error while ading event
+UIProvider.3=Error processing the input: The introduced Date is not valid
+UIProvider.4=Error processing the input: Make sure all mandatory fields are filled
+UIProvider.5=Unknown error processing the input
+UIProvider.6=Unknown error in service
+UIProvider.7=Event successfully removed
+UIProvider.8=Error while removing event
+UIProvider.9=Events successfully exported
 AgendaServlet.1=Check your agenda, you have an event in 2 hours!
 AgendaWebGUI.1=Here you can add a new event for the user - Select a calendar where to store the event
 AgendaWebGUI.2=No calendars were found for the user!!!
