--- a/agenda/agenda.server/src/main/resources/org/universAAL/agenda/server/messages_hr.properties
+++ b/agenda/agenda.server/src/main/resources/org/universAAL/agenda/server/messages_hr.properties
@@ -1,13 +1,13 @@
 AgendaProvider.33=line1\nline2\nline3\nline4\nline5\nline6
-AgendaProvider.34=Enter some text:
-AgendaProvider.DoYouWantToBeRemindedAgain=Do you want to be reminded again?
-AgendaProvider.InvalidInput=Invalid input\!
-AgendaProvider.InvalidUserInput=Invalid User Input\!
-AgendaProvider.NoEventWithTheGivenIdWasFound=No event with the given id was found\!
-AgendaProvider.Reminder=Reminder
-AgendaProvider.ReminderTriggered=Reminder triggered
-AgendaProvider.TheGivenCalendarAlreadyExists=The given calendar already exists\!
-AgendaProvider.TheGivenCalendarDoesNotExist=The given calendar does not exist\!
-AgendaProvider.TheGivenCalendarOrEventDoesNotExistOrThereIsNoCorrelationBetweenThem=The given calendar or event does not exist or there is no correlation with the event\!
-AgendaProvider.TheGivenEventCouldNotBeDeleted=The given event could not be deleted\!
-AgendaProvider.YouMustSpecifyAnOwnerForTheCalendar=You must specify an owner for the calendar
+AgendaProvider.34=Upisi neki tekst:
+AgendaProvider.DoYouWantToBeRemindedAgain=Zelis li da se podsjetnik ponovi?
+AgendaProvider.InvalidInput=Neispravan unos\!
+AgendaProvider.InvalidUserInput=Neispravan korisnicki unos\!
+AgendaProvider.NoEventWithTheGivenIdWasFound=Dogadaj sa danom oznakom nije pronaden\!
+AgendaProvider.Reminder=Podsjetnik
+AgendaProvider.ReminderTriggered=Podsjetnik aktiviran 
+AgendaProvider.TheGivenCalendarAlreadyExists=Taj kalendar vec postoji\!
+AgendaProvider.TheGivenCalendarDoesNotExist=Kalendar ne postoji\!
+AgendaProvider.TheGivenCalendarOrEventDoesNotExistOrThereIsNoCorrelationBetweenThem=Kalendar ili dogadaj ne postoji ili nema korelacije medu njima\!
+AgendaProvider.TheGivenEventCouldNotBeDeleted=Dogadaj ne moze biti izbrisan\!
+AgendaProvider.YouMustSpecifyAnOwnerForTheCalendar=Vlasnik kalendara mora biti specificiran
