agenda remote - changed reminder default values, externalized strings update

--- a/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages.properties
+++ b/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages.properties
@@ -8,6 +8,7 @@ UIProvider.7=Event successfully removed
 UIProvider.8=Error while removing event
 UIProvider.9=Events successfully exported
 AgendaServlet.1=Check your agenda, you have an event in 2 hours!
+AgendaWebGUI.AgendaScreenTitle=Agenda Event Editor  
 AgendaWebGUI.1=<p>Here you can add a new event for the user - Select a calendar where to store the event</p>
 AgendaWebGUI.2=No calendars were found for the user!!!
 AgendaWebGUI.4=Calendar
@@ -24,7 +25,7 @@ AgendaWebGUI.14=Event Type
 AgendaWebGUI.15=Place
 AgendaWebGUI.16=Description
 AgendaWebGUI.17=Reminder
-AgendaWebGUI.18=<p>Set the reminder time and message - Note that the default date is tomorrow, 15 minutes before the event<br>Leave message empty to ignore reminder</p>
+AgendaWebGUI.18=<p>Set the reminder time and message<br>Leave message empty to ignore reminder</p>
 AgendaWebGUI.19=Message
 AgendaWebGUI.20=Submit
 AgendaWebGUI.21=Home
@@ -32,4 +33,9 @@ AgendaWebGUI.22=Close window to finish or \"Add new event\" to continue adding m
 AgendaWebGUI.23=Add new event
 AgendaWebGUI.24=Events
 AgendaWebGUI.25=No calendar.
+AgendaWebGUI.24=Events
+AgendaWebGUI.25=No calendar.
+AgendaWebGUI.26=Event Editor
+AgendaWebGUI.27=Delete
+#AgendaWebGUI.28=Google Calendar
 AgendaWebGUI.26=Event Editor
