--- a/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_en.properties
+++ b/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_en.properties
@@ -8,11 +8,12 @@ UIProvider.7=Event successfully removed
 UIProvider.8=Error while removing event
 UIProvider.9=Events successfully exported
 AgendaServlet.1=Check your agenda, you have an event in 2 hours!
+AgendaWebGUI.AgendaScreenTitle=Agenda Event Editor
 AgendaWebGUI.1=<p>Here you can add a new event for the user - Select a calendar where to store the event</p>
 AgendaWebGUI.2=No calendars were found for the user!!!
 AgendaWebGUI.4=Calendar
 AgendaWebGUI.5=Date
-AgendaWebGUI.6=<p>Select a date for the event - Note that the default date is tomorrow at this hour</p>
+AgendaWebGUI.6=<p>Select a date for the event</p>
 AgendaWebGUI.7=Day
 AgendaWebGUI.8=Month
 AgendaWebGUI.9=Year
@@ -33,3 +34,5 @@ AgendaWebGUI.23=Add new event
 AgendaWebGUI.24=Events
 AgendaWebGUI.25=No calendar.
 AgendaWebGUI.26=Event Editor
+AgendaWebGUI.27=Delete
+#AgendaWebGUI.28=Google Calendar
