--- a/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_es.properties
+++ b/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_es.properties
@@ -8,6 +8,7 @@ UIProvider.7=Event successfully removed
 UIProvider.8=Error while removing event
 UIProvider.9=Events successfully exported
 AgendaServlet.1=Compruebe su agenda, tiene un evento dentro de 2 horas
+AgendaWebGUI.AgendaScreenTitle=Agenda Event Editor
 AgendaWebGUI.1=Aqui puede añadir un nuevo evento para el usuario - Elija un calendario en el que guardar el evento
 AgendaWebGUI.2=¡No se han encontrado calendarios para el usuario!
 AgendaWebGUI.4=Calendario
@@ -30,3 +31,8 @@ AgendaWebGUI.20=Enviar
 AgendaWebGUI.21=Inicio
 AgendaWebGUI.22=Cierre la ventana para finalizar o pulse \"Añadir nuevo evento\" para continuar añadiendo eventos
 AgendaWebGUI.23=Añadir nuevo evento
+AgendaWebGUI.24=Events
+AgendaWebGUI.25=No calendar.
+AgendaWebGUI.26=Event Editor
+AgendaWebGUI.27=Delete
+#AgendaWebGUI.28=Google Calendar
