agenda runner  - users for Odense demo added, DB URI update

--- a/agenda/agenda.runner/runner/configurations/ui.dm.mobile/messages.properties
+++ b/agenda/agenda.runner/runner/configurations/ui.dm.mobile/messages.properties
@@ -4,6 +4,7 @@ UICaller.switchTo=Switch to
 UICaller.deleteAll=Delete All
 UICaller.forcedCancellation=Forced Cancellation
 UICaller.universAALMainMenu=universAAL Main Menu
+UICaller.personaMainMenu=universAAL Main Menu
 UICaller.pendingMessages=Pending Messages
 UICaller.pendingDialogs=Pending Dialogs
 UICaller.sorryAborted=Sorry, the application aborted the dialog: 
