constants extracted for calendar, eveninfo and eventlist

--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_hr.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_hr.properties
@@ -12,7 +12,7 @@ JEventInfo.Breadcrumb.Home.EventInfo=Pocetni ekran -> Informacije o dogadaju
 JEventInfo.Breadcrumb.Home.EventList=Pocetni ekran -> Lista dogadaja
 JEventInfo.Breadcrumb.Home.SearchEvents=Pocetni ekran -> Trazenje dogadaja
 JEventInfo.Breadcrumb.Home.SearchEvents=Odabir kalendara
-JEventInfo.AppointmentInfo=Informacija o sastanku
+JEventInfo.AppointmentInfo=Informacije o dogadaju
 JEventInfo.Calendar=Kalendar
 JEventInfo.Description=Opis
 JEventInfo.EndDate=Datum - kraj
@@ -27,7 +27,7 @@ JEventList.EndDate=datum - kraj
 JEventList.Hour=Sat
 JEventList.NoEventIsStoredForThisDate=Nema dogadaja za ovaj datum
 JEventList.NoScheduledAppointment=Nema planiranih sastanaka
-JEventList.Place=Mjest
+JEventList.Place=Mjesto
 JEventList.ScheduleAppointment=planirani sastanak
 JEventList.ScheduledAppointment=planirani sastanak
 JEventList.ScheduledAppointments=planirani sastanci
