--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_da.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_da.properties
@@ -44,7 +44,7 @@ JSearchEvents.SearchByDescription=Søg med beskrivelse
 JSearchEvents.SearchForAppointments=Søg efter begivenhed
 JSearchEvents.ShoWOnlyPresentAndFurureEvents=Vis kun nuværende og fremtidige begivenheder:
 JSelectionCalendar.AddRemoveAndBrowseYourCalendars=Tilføj, fjern og kig i dine kalendre
-JSelectionCalendar.AllAssociatedEventsWillBeRemovedToo=vil alle tilknyttede begivenheder også blive fjernet.
+JSelectionCalendar.AllAssociatedEventsWillBeRemovedToo=vil alle tilknyttede begivenheder også blive fjernet!
 JSelectionCalendar.AlongWiththeCalendar=Sammen med kalenderen
 JSelectionCalendar.AlongWiththeCalendars=Sammen med kalendrene
 JSelectionCalendar.AreYouSureYouWantToRemoveTheseCalendars=Er du sikker på at du vil fjerne disse kalendre? 
@@ -54,7 +54,7 @@ JSelectionCalendar.CalendarnameIsOK=Kalendernavn er ok
 JSelectionCalendar.Calendars=Kalendrer
 JSelectionCalendar.GiveANameForTheNewCalendar=Giv et navn til den nye kalender
 JSelectionCalendar.ListOfCalendars=Liste over kalendrer
-JSelectionCalendar.Name=Navn
+JSelectionCalendar.Name=Nye kalender
 JSelectionCalendar.PleaseChooseAnAlternativeOne=Vælg venligst et alternativ
 JSelectionCalendar.SorryThisNameAlreadyExists=Desværre, dette navn eksisterer allerede
 JSelectionCalendar.YouhaveToSpecifyAName=Du skal specificere et navn
