--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_de.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_de.properties
@@ -44,7 +44,7 @@ JSearchEvents.SearchByDescription=Suche nach Beschreibung
 JSearchEvents.SearchForAppointments=Suche nach Terminen
 JSearchEvents.ShoWOnlyPresentAndFurureEvents=Zeige nur <p>gegenwartigen und zukunftigen Ereignisse:
 JSelectionCalendar.AddRemoveAndBrowseYourCalendars=Hinzufugen, Entfernen und durchsuchen Sie Ihre Kalender
-JSelectionCalendar.AllAssociatedEventsWillBeRemovedToo=alle damit verbundenen Veranstaltungen werden auch entfernt werden.
+JSelectionCalendar.AllAssociatedEventsWillBeRemovedToo=alle damit verbundenen Veranstaltungen werden auch entfernt werden!
 JSelectionCalendar.AlongWiththeCalendar=Zusammen mit dem Kalender
 JSelectionCalendar.AlongWiththeCalendars=Zusammen mit den Kalendern
 JSelectionCalendar.AreYouSureYouWantToRemoveTheseCalendars=Sind Sie sicher, dass Sie diese Kalender zu entfernen? 
@@ -54,7 +54,7 @@ JSelectionCalendar.CalendarnameIsOK=Kalender Name ok
 JSelectionCalendar.Calendars=Kalender
 JSelectionCalendar.GiveANameForTheNewCalendar=Geben Sie einen Namen für den neuen Kalender
 JSelectionCalendar.ListOfCalendars=Liste der Kalender
-JSelectionCalendar.Name=Name
+JSelectionCalendar.Name=Neuen Kalender
 JSelectionCalendar.PleaseChooseAnAlternativeOne=Bitte wahlen Sie eine Alternative ein
 JSelectionCalendar.SorryThisNameAlreadyExists=Sorry, dieser Name ist bereits vorhanden
 JSelectionCalendar.YouhaveToSpecifyAName=Sie mussen einen Namen angeben
