--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_es.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_es.properties
@@ -44,7 +44,7 @@ JSearchEvents.SearchByDescription=Busque por descripción
 JSearchEvents.SearchForAppointments=Busque por citas
 JSearchEvents.ShoWOnlyPresentAndFurureEvents=Muestrar solo<p>los eventos actuales y futuros:
 JSelectionCalendar.AddRemoveAndBrowseYourCalendars=Añada, elimine y busque sus calendarios
-JSelectionCalendar.AllAssociatedEventsWillBeRemovedToo=todos los eventos relacionados se eliminarán.
+JSelectionCalendar.AllAssociatedEventsWillBeRemovedToo=todos los eventos relacionados se eliminarán!
 JSelectionCalendar.AlongWiththeCalendar=Junto con el calendario
 JSelectionCalendar.AlongWiththeCalendars=Junto con los calendarios
 JSelectionCalendar.AreYouSureYouWantToRemoveTheseCalendars=¿Esta seguro que desea eliminar estos Calendarios? 
@@ -54,7 +54,7 @@ JSelectionCalendar.CalendarnameIsOK=El Nombre del Calendario esta OK
 JSelectionCalendar.Calendars=Calendarios
 JSelectionCalendar.GiveANameForTheNewCalendar=Ponga un nombre al nuevo calendario
 JSelectionCalendar.ListOfCalendars=Lista de Calendarios
-JSelectionCalendar.Name=Nombre
+JSelectionCalendar.Name=Nuevo calendario
 JSelectionCalendar.PleaseChooseAnAlternativeOne=Por favor seleccione uno alternativo
 JSelectionCalendar.SorryThisNameAlreadyExists=Lo sentimos, este nombre ya existe
 JSelectionCalendar.YouhaveToSpecifyAName=Usted debe especificar un nombre
