--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_hr.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_hr.properties
@@ -26,11 +26,11 @@ JEventList.ClickForMoreInfo=Odaberi za vise informacija
 JEventList.EndDate=datum - kraj
 JEventList.Hour=Sat
 JEventList.NoEventIsStoredForThisDate=Nema dogadaja za ovaj datum
-JEventList.NoScheduledAppointment=Nema planiranih sastanaka
+JEventList.NoScheduledAppointment=Nema planiranih dogadaja
 JEventList.Place=Mjesto
-JEventList.ScheduleAppointment=planirani sastanak
-JEventList.ScheduledAppointment=planirani sastanak
-JEventList.ScheduledAppointments=planirani sastanci
+JEventList.ScheduleAppointment=planirani dogadaj
+JEventList.ScheduledAppointment=planirani dogadaj
+JEventList.ScheduledAppointments=planiranih dogadaja
 JEventList.SearchResults=Rezultati pretrage
 JEventList.StartDay=datum - pocetak
 JSearchEvents.AllYears=Sve godine
@@ -44,7 +44,7 @@ JSearchEvents.SearchByDescription=Pretrazi po opisu
 JSearchEvents.SearchForAppointments=Pretrazi sastanke
 JSearchEvents.ShoWOnlyPresentAndFurureEvents=Pokazi samo<p>sadasnje i buduce dogadaje:
 JSelectionCalendar.AddRemoveAndBrowseYourCalendars=Dodaj, izbrisi ili pregledaj svoje kalendare
-JSelectionCalendar.AllAssociatedEventsWillBeRemovedToo=svi vezani dogadaji ce takoder biti maknuti
+JSelectionCalendar.AllAssociatedEventsWillBeRemovedToo=svi vezani dogadaji ce takoder biti maknuti!
 JSelectionCalendar.AlongWiththeCalendar=S kalendarom
 JSelectionCalendar.AlongWiththeCalendars=S kalendarima
 JSelectionCalendar.AreYouSureYouWantToRemoveTheseCalendars=Zaista zelis izbrisati kalendare? 
@@ -54,7 +54,7 @@ JSelectionCalendar.CalendarnameIsOK=Ime kalendara je u redu
 JSelectionCalendar.Calendars=Kalendari
 JSelectionCalendar.GiveANameForTheNewCalendar=Daj ime novom kalendaru
 JSelectionCalendar.ListOfCalendars=Lista kalendara
-JSelectionCalendar.Name=Ime
+JSelectionCalendar.Name=Novi kalendar
 JSelectionCalendar.PleaseChooseAnAlternativeOne=Molim odaberi alternativu
 JSelectionCalendar.SorryThisNameAlreadyExists=Nazalost, ime vec postoji
 JSelectionCalendar.YouhaveToSpecifyAName=Ime se mora specificirati
