--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_it.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_it.properties
@@ -13,6 +13,7 @@ JEventInfo.Breadcrumb.Home.EventList=schermata iniziale -> Elenco eventi
 JEventInfo.Breadcrumb.Home.SearchEvents=schermata iniziale -> Cerca eventi
 JEventInfo.Breadcrumb.Home.SearchEvents=Calendario selezione
 JEventInfo.AppointmentInfo=Informazioni Appuntamento
+JEventInfo.Calendar=Calendario
 JEventInfo.Description=Descrizione
 JEventInfo.EndDate=Data di fine
 JEventInfo.EventType=Tipo di evento
@@ -53,7 +54,7 @@ JSelectionCalendar.CalendarnameIsOK=Il nome del calendario è ok
 JSelectionCalendar.Calendars=Calendari
 JSelectionCalendar.GiveANameForTheNewCalendar=Dai un nome al nuovo calendario
 JSelectionCalendar.ListOfCalendars=Lista dei calendari
-JSelectionCalendar.Name=Nome
+JSelectionCalendar.Name=Nuovo calendario
 JSelectionCalendar.PleaseChooseAnAlternativeOne=Per favore scegli una alternativa
 JSelectionCalendar.SorryThisNameAlreadyExists=Spiacente, questo nome esiste già
 JSelectionCalendar.YouhaveToSpecifyAName=Devi specificare un nome
