--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_nl.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_nl.properties
@@ -44,7 +44,7 @@ JSearchEvents.SearchByDescription=Zoeken op omschrijving
 JSearchEvents.SearchForAppointments=Zoeken naar afspraken
 JSearchEvents.ShoWOnlyPresentAndFurureEvents=Toon alleen <p> huidige en toekomstige evenementen:
 JSelectionCalendar.AddRemoveAndBrowseYourCalendars=Toevoegen, verwijderen en doorzoek uw agenda
-JSelectionCalendar.AllAssociatedEventsWillBeRemovedToo=Alle bijbehorende gebeurtenissen zullen ook worden verwijderd.
+JSelectionCalendar.AllAssociatedEventsWillBeRemovedToo=Alle bijbehorende gebeurtenissen zullen ook worden verwijderd!
 JSelectionCalendar.AlongWiththeCalendar=Samen met de kalender
 JSelectionCalendar.AlongWiththeCalendars=Samen met de agenda's
 JSelectionCalendar.AreYouSureYouWantToRemoveTheseCalendars=Weet u zeker dat u deze agenda's verwijderen? 
@@ -54,7 +54,7 @@ JSelectionCalendar.CalendarnameIsOK=Kalender Naam ok
 JSelectionCalendar.Calendars=Kalenders
 JSelectionCalendar.GiveANameForTheNewCalendar=Geef een naam voor de nieuwe kalender
 JSelectionCalendar.ListOfCalendars=Lijst van agenda's
-JSelectionCalendar.Name=Naam
+JSelectionCalendar.Name=Nieuwe kalender
 JSelectionCalendar.PleaseChooseAnAlternativeOne=Kies een alternatieve
 JSelectionCalendar.SorryThisNameAlreadyExists=Sorry, deze naam bestaat al
 JSelectionCalendar.YouhaveToSpecifyAName=U moet een naam op te geven
