--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_en.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_en.properties
@@ -44,7 +44,7 @@ JSearchEvents.SearchByDescription=Search by description
 JSearchEvents.SearchForAppointments=Search for Appointments
 JSearchEvents.ShoWOnlyPresentAndFurureEvents=Show only<p>present and future events:
 JSelectionCalendar.AddRemoveAndBrowseYourCalendars=Add, remove and browse your calendars
-JSelectionCalendar.AllAssociatedEventsWillBeRemovedToo=all associated events will be removed too.
+JSelectionCalendar.AllAssociatedEventsWillBeRemovedToo=all associated events will be removed too!
 JSelectionCalendar.AlongWiththeCalendar=Along with the calendar
 JSelectionCalendar.AlongWiththeCalendars=Along with the calendars
 JSelectionCalendar.AreYouSureYouWantToRemoveTheseCalendars=Are you sure you want to remove these Calendars? 
@@ -54,7 +54,7 @@ JSelectionCalendar.CalendarnameIsOK=Calendar Name is ok
 JSelectionCalendar.Calendars=Calendars
 JSelectionCalendar.GiveANameForTheNewCalendar=Give a name for the new calendar
 JSelectionCalendar.ListOfCalendars=List of Calendars
-JSelectionCalendar.Name=Name
+JSelectionCalendar.Name=New calendar
 JSelectionCalendar.PleaseChooseAnAlternativeOne=Please choose an alternative one
 JSelectionCalendar.SorryThisNameAlreadyExists=Sorry, this name already exists
 JSelectionCalendar.YouhaveToSpecifyAName=You have to specify a name
