--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_hr.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_hr.properties
@@ -75,7 +75,7 @@ JSearchEvents.ShoWOnlyPresentAndFurureEvents=Pokazi samo<p>sadasnje i buduce dog
 JSelectionCalendar.SelectAll=Oznaci sve
 JSelectionCalendar.SelectNone=Odznaci sve
 JSelectionCalendar.Add=Dodaj
-JSelectionCalendar.Delete=Natrag
+JSelectionCalendar.Delete=Brisi
 JSelectionCalendar.Next=Sljedeci
 JSelectionCalendar.Exit=Izlaz
 JSelectionCalendar.Button.Set=Postavi
