hardcoded user removed - calendars obtained for user that is logged in, TextDemo class deleted, lang translations updated

--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/components/messages_da.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/components/messages_da.properties
@@ -8,7 +8,7 @@ DatePanel.StartDate=Startdato
 DatePanel.time=Tid
 DatePanel.Year=År
 #button
-ReminderPanel.SetReminder=
+ReminderPanel.SetReminder=Angiv pamindelse
 
 ReminderPanel.Active=Aktiv
 ReminderPanel.Date=Dato
@@ -18,8 +18,8 @@ ReminderPanel.ReminderInfo=Påmindelse Info
 ReminderPanel.Type=Type
 ReminderPanel.VisualAlarm=Visuel Alarm
 #buttons
-ReminderScreen.Button.SetReminder=
-ReminderScreen.Button.CancelReminder=
+ReminderScreen.Button.SetReminder=Angiv pamindelse
+ReminderScreen.Button.CancelReminder=Annuller pamindelse
 
 ReminderScreen.IntervalMins=interval (mins)
 ReminderScreen.Message=Meddelelse
