--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/components/messages_de.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/components/messages_de.properties
@@ -8,7 +8,7 @@ DatePanel.StartDate=Startdatum
 DatePanel.time=Zeit
 DatePanel.Year=Jahr
 #button
-ReminderPanel.SetReminder=
+ReminderPanel.SetReminder=Stellen Erinnerung
 
 ReminderPanel.Active=Aktiv
 ReminderPanel.Date=Datum
@@ -18,8 +18,8 @@ ReminderPanel.ReminderInfo=Erinnerung Informationend
 ReminderPanel.Type=Typ
 ReminderPanel.VisualAlarm=Visueller Alarm
 #buttons
-ReminderScreen.Button.SetReminder=
-ReminderScreen.Button.CancelReminder=
+ReminderScreen.Button.SetReminder=Stellen Erinnerung
+ReminderScreen.Button.CancelReminder=Stornier Erinnerung 
 
 ReminderScreen.IntervalMins=Intervall  (Min.)
 ReminderScreen.Message=Nachricht
