--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/components/messages_es.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/components/messages_es.properties
@@ -8,7 +8,7 @@ DatePanel.StartDate=Fecha iniciación
 DatePanel.time=hora
 DatePanel.Year=año
 #button
-ReminderPanel.SetReminder=
+ReminderPanel.SetReminder=Establecer un Recordatorio
 
 ReminderPanel.Active=Activo
 ReminderPanel.Date=Fecha
@@ -18,8 +18,8 @@ ReminderPanel.ReminderInfo=Información del Recordatorio
 ReminderPanel.Type=Tipo
 ReminderPanel.VisualAlarm=Alarma Visual
 #buttons
-ReminderScreen.Button.SetReminder=
-ReminderScreen.Button.CancelReminder=
+ReminderScreen.Button.SetReminder=Establecer un Recordatorio
+ReminderScreen.Button.CancelReminder=Eliminar un Recordatorio
 
 ReminderScreen.IntervalMins=intervalo (minutos)
 ReminderScreen.Message=Mensaje
