--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/components/messages_it.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/components/messages_it.properties
@@ -8,7 +8,7 @@ DatePanel.StartDate=Data di inizio
 DatePanel.time=tempo
 DatePanel.Year=anno
 #button
-ReminderPanel.SetReminder=
+ReminderPanel.SetReminder=Impostare un promemoria
 
 ReminderPanel.Active=Attivo
 ReminderPanel.Date=Data
@@ -18,8 +18,8 @@ ReminderPanel.ReminderInfo=Info Promemoria
 ReminderPanel.Type=Tipo
 ReminderPanel.VisualAlarm=Allarme visuale
 #buttons
-ReminderScreen.Button.SetReminder=
-ReminderScreen.Button.CancelReminder=
+ReminderScreen.Button.SetReminder=Impostare un promemoria
+ReminderScreen.Button.CancelReminder=Cancellare un promemoria
 
 ReminderScreen.IntervalMins=intervallo (min)
 ReminderScreen.Message=Messaggio
