--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/components/messages_nl.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/components/messages_nl.properties
@@ -7,6 +7,9 @@ DatePanel.Month=maand
 DatePanel.StartDate=Start datum
 DatePanel.time=tijd
 DatePanel.Year=jaar
+#button
+ReminderPanel.SetReminder=Een herinnering
+
 ReminderPanel.Active=Actief
 ReminderPanel.Date=Datum
 ReminderPanel.Inactive=Inactief
@@ -14,6 +17,10 @@ ReminderPanel.Reminder=Herinnering
 ReminderPanel.ReminderInfo=Herinnering Info
 ReminderPanel.Type=Type
 ReminderPanel.VisualAlarm=Visueel Alarm
+#buttons
+ReminderScreen.Button.SetReminder=Een herinnering
+ReminderScreen.Button.CancelReminder=Verwijder een herinnering
+
 ReminderScreen.IntervalMins=interval (minuten)
 ReminderScreen.Message=Bericht
 ReminderScreen.Misc=Misc
