new screen for selecting calOwner added, bin deleted, documentation added

--- a/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_es.properties
+++ b/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages_es.properties
@@ -1,38 +1,41 @@
-UIProvider.1=Evento añadido correctamente
-UIProvider.2=Error añadiendo evento
-UIProvider.3=Error procesando los datos: La fecha introducida no es válida
-UIProvider.4=Error procesando los datos: Asegúrese de que todos los campos obligatorios han sido introducidos
-UIProvider.5=Error desconocido procesando los datos
-UIProvider.6=Unknown error in service
-UIProvider.7=Event successfully removed
-UIProvider.8=Error while removing event
-UIProvider.9=Events successfully exported
-AgendaServlet.1=Compruebe su agenda, tiene un evento dentro de 2 horas
+UIProvider.EventSuccessfullyAdded=Evento añadido correctamente
+UIProvider.ErrorAddingEvent=Error añadiendo evento
+UIProvider.InvalidInputDate=Error procesando los datos: La fecha introducida no es válida
+UIProvider.InvalidInputMissing=Error procesando los datos: Asegúrese de que todos los campos obligatorios han sido introducidos
+UIProvider.InvalidInputUnknown=Error desconocido procesando los datos
+UIProvider.UnknownServiceError=Unknown error in service
+UIProvider.EventSucessfullyRemoved=Event successfully removed
+UIProvider.ErrorRemovingEvent=Error while removing event
+
+AgendaWebGUI.SelectUser=Seleccione el usuario cuyos eventos que desea editar
+AgendaWebGUI.NoUsersFound=No se encontraron usuarios
+AgendaWebGUI.EditEvents=Editar eventos
+AgendaWebGUI.User=Usuario
+
 AgendaWebGUI.AgendaScreenTitle=Agenda Event Editor
-AgendaWebGUI.1=Aqui puede añadir un nuevo evento para el usuario - Elija un calendario en el que guardar el evento
-AgendaWebGUI.2=¡No se han encontrado calendarios para el usuario!
-AgendaWebGUI.4=Calendario
-AgendaWebGUI.5=Fecha
-AgendaWebGUI.6=Elija una fecha para el evento - Tenga en cuenta que la fecha por defecto es mañana a esta hora
-AgendaWebGUI.7=Día
-AgendaWebGUI.8=Mes
-AgendaWebGUI.9=Año
-AgendaWebGUI.10=Hora
-AgendaWebGUI.11=Minuto
-AgendaWebGUI.12=Evento
-AgendaWebGUI.13=Escriba los detalles del evento
-AgendaWebGUI.14=Tipo de evento
-AgendaWebGUI.15=Lugar
-AgendaWebGUI.16=Descripción
-AgendaWebGUI.17=Recordatorio
-AgendaWebGUI.18=Configure el mensaje y la fecha del recordatorio - Tenga en cuenta que la fecha por defecto es mañana 15 minutos antes del evento<br>Deje el mensaje en blanco para ignorarlo
-AgendaWebGUI.19=Mensaje
-AgendaWebGUI.20=Enviar
-AgendaWebGUI.21=Inicio
-AgendaWebGUI.22=Cierre la ventana para finalizar o pulse \"Añadir nuevo evento\" para continuar añadiendo eventos
-AgendaWebGUI.23=Añadir nuevo evento
-AgendaWebGUI.24=Events
-AgendaWebGUI.25=No calendar.
-AgendaWebGUI.26=Event Editor
-AgendaWebGUI.27=Delete
-#AgendaWebGUI.28=Google Calendar
+AgendaWebGUI.SelectCalendar=Aqui puede añadir un nuevo evento para el usuario - Elija un calendario en el que guardar el evento
+AgendaWebGUI.NoCalendarsFound=¡No se han encontrado calendarios para el usuario!
+AgendaWebGUI.Calendar=Calendario
+AgendaWebGUI.Date=Fecha
+AgendaWebGUI.SelectDate=Elija una fecha para el evento - Tenga en cuenta que la fecha por defecto es mañana a esta hora
+AgendaWebGUI.Day=Día
+AgendaWebGUI.Month=Mes
+AgendaWebGUI.Year=Año
+AgendaWebGUI.Hour=Hora
+AgendaWebGUI.Minute=Minuto
+AgendaWebGUI.Event=Evento
+AgendaWebGUI.Details=Escriba los detalles del evento
+AgendaWebGUI.Type=Tipo de evento
+AgendaWebGUI.Place=Lugar
+AgendaWebGUI.Desc=Descripción
+AgendaWebGUI.Reminder=Recordatorio
+AgendaWebGUI.InfoToSetReminder=Configure el mensaje y la fecha del recordatorio - Tenga en cuenta que la fecha por defecto es mañana 15 minutos antes del evento<br>Deje el mensaje en blanco para ignorarlo
+AgendaWebGUI.Message=Mensaje
+AgendaWebGUI.Submit=Enviar
+AgendaWebGUI.Interval="Intervalo(min) ";
+AgendaWebGUI.Home=Inicio
+AgendaWebGUI.InfoAfterAddingEvent=Cierre la ventana para finalizar o pulse \"Añadir nuevo evento\" para continuar añadiendo eventos
+AgendaWebGUI.AddNewEvent=Añadir nuevo evento
+AgendaWebGUI.GetEventList= GetEventList!!!!
+AgendaWebGUI.EventEditor=Event Editor!!
+AgendaWebGUI.Delete=Delete!!!
