--- a/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages.properties
+++ b/agenda/agenda.remote/src/main/resources/org/universAAL/agenda/remote/messages.properties
@@ -1,41 +1,41 @@
-UIProvider.1=Event successfully added
-UIProvider.2=Error while adding event
-UIProvider.3=Error processing the input: The introduced Date is not valid
-UIProvider.4=Error processing the input: Make sure all mandatory fields are filled
-UIProvider.5=Unknown error processing the input
-UIProvider.6=Unknown error in service
-UIProvider.7=Event successfully removed
-UIProvider.8=Error while removing event
-UIProvider.9=Events successfully exported
-AgendaServlet.1=Check your agenda, you have an event in 2 hours!
+UIProvider.EventSuccessfullyAdded=Event successfully added
+UIProvider.ErrorAddingEvent=Error while adding event
+UIProvider.InvalidInputDate=Error processing the input: The introduced Date is not valid
+UIProvider.InvalidInputMissing=Error processing the input: Make sure all mandatory fields are filled
+UIProvider.InvalidInputUnknown=Unknown error processing the input
+UIProvider.UnknownServiceError=Unknown error in service
+UIProvider.EventSucessfullyRemoved=Event successfully removed
+UIProvider.ErrorRemovingEvent=Error while removing event
+
+AgendaWebGUI.SelectUser=Select user whose events you want to edit 
+AgendaWebGUI.NoUsersFound=No users found
+AgendaWebGUI.EditEvents=Edit events
+AgendaWebGUI.User=User
+
 AgendaWebGUI.AgendaScreenTitle=Agenda Event Editor  
-AgendaWebGUI.1=<p>Here you can add a new event for the user - Select a calendar where to store the event</p>
-AgendaWebGUI.2=No calendars were found for the user!!!
-AgendaWebGUI.4=Calendar
-AgendaWebGUI.5=Date
-AgendaWebGUI.6=<p>Select a date for the event - Note that the default date is tomorrow at this hour</p>
-AgendaWebGUI.7=Day
-AgendaWebGUI.8=Month
-AgendaWebGUI.9=Year
-AgendaWebGUI.10=Hour
-AgendaWebGUI.11=Minute
-AgendaWebGUI.12=Event
-AgendaWebGUI.13=<p>Type the details of the event</p>
-AgendaWebGUI.14=Event Type
-AgendaWebGUI.15=Place
-AgendaWebGUI.16=Description
-AgendaWebGUI.17=Reminder
-AgendaWebGUI.18=<p>Set the reminder time and message<br>Leave message empty to ignore reminder</p>
-AgendaWebGUI.19=Message
-AgendaWebGUI.20=Submit
-AgendaWebGUI.21=Home
-AgendaWebGUI.22=Close window to finish or \"Add new event\" to continue adding more events
-AgendaWebGUI.23=Add new event
-AgendaWebGUI.24=Events
-AgendaWebGUI.25=No calendar.
-AgendaWebGUI.24=Events
-AgendaWebGUI.25=No calendar.
-AgendaWebGUI.26=Event Editor
-AgendaWebGUI.27=Delete
-#AgendaWebGUI.28=Google Calendar
-AgendaWebGUI.26=Event Editor
+AgendaWebGUI.SelectCalendar=<p>Here you can add a new event for the user - Select a calendar where to store the event</p>
+AgendaWebGUI.NoCalendarsFound=No calendars were found for the user!!!
+AgendaWebGUI.Calendar=Calendar
+AgendaWebGUI.Date=Date
+AgendaWebGUI.SelectDate=<p>Select a date for the event - Note that the default date is tomorrow at this hour</p>
+AgendaWebGUI.Day=Day
+AgendaWebGUI.Month=Month
+AgendaWebGUI.Year=Year
+AgendaWebGUI.Hour=Hour
+AgendaWebGUI.Minute=Minute
+AgendaWebGUI.Event=Event
+AgendaWebGUI.Details=<p>Type the details of the event</p>
+AgendaWebGUI.Type=Event Type
+AgendaWebGUI.Place=Place
+AgendaWebGUI.Desc=Description
+AgendaWebGUI.Reminder=Reminder
+AgendaWebGUI.InfoToSetReminder=<p>Set the reminder time and message<br>Leave message empty to ignore reminder</p>
+AgendaWebGUI.Message=Message
+AgendaWebGUI.Submit=Submit
+AgendaWebGUI.Interval=Interval(min) 
+AgendaWebGUI.Home=Home
+AgendaWebGUI.InfoAfterAddingEvent=Close window to finish or \"Add new event\" to continue adding more events
+AgendaWebGUI.AddNewEvent=Add new event
+AgendaWebGUI.GetEventList=Get Event List
+AgendaWebGUI.EventEditor=Add new event
+AgendaWebGUI.Delete=Delete
